Bug 71580 - Elements dock: Alignment items are missing
Summary: Elements dock: Alignment items are missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Thomas Arnhold
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks: 68871
  Show dependency treegraph
 
Reported: 2013-11-13 15:56 UTC by Thomas Arnhold
Modified: 2013-11-14 08:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
The missing items (8.39 KB, image/png)
2013-11-13 15:56 UTC, Thomas Arnhold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Arnhold 2013-11-13 15:56:58 UTC
Created attachment 89151 [details]
The missing items

The old elements toolbar had three buttons to the alignment functions "alignl", "alignc" and "alignr". Those should be accessible if we move forward to the Elements dock.
Comment 1 Commit Notification 2013-11-14 08:55:18 UTC
Thomas Arnhold committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e00906285c59bf49efaa07df83293d8cd21c9bb

fdo#71580: Elements dock: Alignment items are missing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.