fdo#71580: Elements dock: Alignment items are missing

Also add << and >> to the Elements dock.

Change-Id: Id58d64c8ab938259e84ce1a178644c6d4a6ee95d